@@ -236,9 +236,7 @@ and
 .I Insert subproof
 are active over proof commands. They sent, respectively, the
 selected proof command or all proof commands in the selected
-subtree, to Proof General, which inserts them at point. For 
-.I Insert subproof
-the command is asserted as well.
+subtree, to Proof General, which inserts them at point. 
 .\"
 .\" ==========================================================================
 .\" ================ Configuration ===========================================
