@@ -1,3 +1,7 @@
+2013-01-21  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
+	* implement proof script insertion
+
 2013-01-20  Hendrik Tews  <tews@os.inf.tu-dresden.de>
 
 	* implement undo
